<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/aboutversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="60dp"
        android:paddingTop="20dp"
        android:text="@string/text_about_version"
        android:textSize="@dimen/fontSize_medium" />

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:gravity="center"
        android:paddingBottom="60dp"
        android:text="@string/text_about_me"
        android:textSize="@dimen/fontSize_medium" />

    <TextView
        android:id="@+id/aboutdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/text_about_data"
        android:textSize="@dimen/fontSize_medium" />

</LinearLayout>
